--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "4.17.3",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "mongoose": "^6.2.2"
   }
 }
