--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.2"
   }
 }
